<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#26A69A"
                android:fontFamily="monospace"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/location"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_editMap"
                android:layout_width="390dp"
                android:layout_height="300dp"
                android:layout_gravity="center" />

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/text_setTitle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/title"
                android:inputType="text"
                android:paddingStart="10sp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/text_setLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="10sp"
                android:paddingBottom="10sp"
                android:text="@string/finding_location"
                android:textColor="#000000"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/text_setDescription"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:paddingStart="10sp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/checkbox_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#26A69A"
                android:fontFamily="sans-serif"
                android:text="@string/set_as_reminder"
                android:textColor="#000000" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/text_saveError"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/error"
                android:textColor="#DF130F"
                android:visibility="gone" />

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/button_saveLocation"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#26A69A"
                android:enabled="true"
                android:fontFamily="sans-serif"
                android:onClick="onSave"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</layout>