<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#26A69A"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/geotracker"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="370dp"
            android:layout_height="400dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button_locations"
            android:layout_width="370dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#26A69A"
            android:fontFamily="sans-serif"
            android:onClick="onLocation"
            android:text="@string/saved_locations"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <Button
            android:id="@+id/button_tracker"
            android:layout_width="370dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#26A69A"
            android:fontFamily="sans-serif"
            android:onClick="onTracker"
            android:text="@string/tracker2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_locations" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="63dp"
            android:layout_height="60dp"
            android:backgroundTint="#00238C81"
            android:onClick="onInformation"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:contentDescription="@string/information" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>