<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/text_locationCardTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#26A69A"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_locationCardAddress"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#191919"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/addr"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_locationCardTitle"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_LocationCardDescription"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="#191919"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/desc"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_locationCardAddress"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_LocationCardDescription" />

        <TextView
            android:id="@+id/text_locationCardID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="14dp"
            android:textColor="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_locationCardTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_locationReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_locationCardAddress"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>